[workspace]
resolver = "2"
members = [
    "benchmark_core",
    "queues/array_queue",
    "queues/atomic_queue",
    "queues/basic_queue",
    "queues/bbq",
    "queues/boost_queue_cpp",
    "queues/bounded_concurrent_queue",
    "queues/unbounded_concurrent_queue",
    "queues/bounded_ringbuffer",
    "queues/faaa_queue",
    "queues/faaa_queue_cpp",
    "queues/lcrq_cpp",
    "queues/lcrq",
    "queues/lprq_cpp",
    "queues/lprq",
    "queues/lf_queue",
    "queues/lockfree_queue",
    "stacks/lockfree_stack",
    "queues/moodycamel_cpp",
    "queues/ms_queue",
    "queues/scc_queue",
    "stacks/scc_stack",
    "queues/scc2_queue",
    "stacks/scc2_stack",
    "queues/seg_queue",
    "queues/tz_queue_leak",
    "queues/tz_queue_hp",
    "queues/wf_queue",
]

[workspace.dependencies]
log = { version = "0.4.25" }
env_logger = { version = "0.11.6" }
haphazard = { version = "0.1.8" }
crossbeam = { version = "0.8" }

