[workspace]
resolver = "2"
members = [
    "benchmark_core",
    "data_structures/queues/array_queue",
    "data_structures/queues/atomic_queue",
    "data_structures/queues/basic_queue",
    "data_structures/queues/bbq",
    "data_structures/queues/boost_queue_cpp",
    "data_structures/queues/bounded_concurrent_queue",
    "data_structures/queues/unbounded_concurrent_queue",
    "data_structures/queues/bounded_ringbuffer",
    "data_structures/queues/faaa_queue",
    "data_structures/queues/faaa_queue_cpp",
    "data_structures/queues/lcrq_cpp",
    "data_structures/queues/lcrq",
    "data_structures/queues/lprq_cpp",
    "data_structures/queues/lprq",
    "data_structures/queues/lf_queue",
    "data_structures/queues/lockfree_queue",
    "data_structures/stacks/lockfree_stack",
    "data_structures/queues/moodycamel_cpp",
    "data_structures/queues/ms_queue",
    "data_structures/queues/scc_queue",
    "data_structures/stacks/scc_stack",
    "data_structures/queues/scc2_queue",
    "data_structures/stacks/scc2_stack",
    "data_structures/queues/seg_queue",
    "data_structures/queues/tz_queue_leak",
    "data_structures/queues/tz_queue_hp",
    "data_structures/queues/wf_queue", 
    "data_structures/priority_queues/basic_priority_queue",
]

[workspace.dependencies]
log = { version = "0.4.25" }
env_logger = { version = "0.11.6" }
haphazard = { version = "0.1.8" }
crossbeam = { version = "0.8" }

