[workspace]
resolver = "2"
members = [
    "benchmark_core",
    "data_structures/fifo_queues/array_queue",
    "data_structures/fifo_queues/atomic_queue",
    "data_structures/fifo_queues/basic_queue",
    "data_structures/fifo_queues/bbq",
    "data_structures/fifo_queues/boost_queue_cpp",
    "data_structures/fifo_queues/bounded_concurrent_queue",
    "data_structures/fifo_queues/unbounded_concurrent_queue",
    "data_structures/fifo_queues/bounded_ringbuffer",
    "data_structures/fifo_queues/faaa_queue",
    "data_structures/fifo_queues/faaa_queue_cpp",
    "data_structures/fifo_queues/lcrq_cpp",
    "data_structures/fifo_queues/lcrq",
    "data_structures/fifo_queues/lprq_cpp",
    "data_structures/fifo_queues/lprq",
    "data_structures/fifo_queues/lf_queue",
    "data_structures/fifo_queues/lockfree_queue",
    "data_structures/stacks/lockfree_stack",
    "data_structures/fifo_queues/moodycamel_cpp",
    "data_structures/fifo_queues/ms_queue",
    "data_structures/fifo_queues/scc_queue",
    "data_structures/stacks/scc_stack",
    "data_structures/fifo_queues/scc2_queue",
    "data_structures/stacks/scc2_stack",
    "data_structures/fifo_queues/seg_queue",
    "data_structures/fifo_queues/tz_queue_leak",
    "data_structures/fifo_queues/tz_queue_hp",
    "data_structures/fifo_queues/wf_queue", 
    "data_structures/priority_queues/basic_priority_queue",
]

[workspace.dependencies]
log = { version = "0.4.25" }
env_logger = { version = "0.11.6" }
haphazard = { version = "0.1.8" }
crossbeam = { version = "0.8" }

